<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_background_light">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_dp"
        android:background="@color/c_background_dark"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/recycler_checkbox"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:srcCompat="@drawable/ic_back"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/font_mini"
            android:text="@string/create_user"
            android:textColor="@color/f_white"
            android:textSize="@dimen/font_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="@dimen/picture_user"
            android:layout_height="@dimen/picture_user"
            android:layout_marginTop="@dimen/font_mini"
            android:foreground="@drawable/ic_image_in_circle"
            android:src="@drawable/ic_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/global_middle_long"
            app:layout_constraintBottom_toBottomOf="@+id/imageView9"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toTopOf="@+id/imageView9"
            app:srcCompat="@drawable/ic_addfoto"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline4">

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/global_middle"
            android:layout_marginEnd="@dimen/global_middle"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_username"
                style="@style/textinputlayout"
                android:hint="@string/username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/te_username"
                    style="@style/textinputedittext"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_career"
                style="@style/textinputedrop"
                android:hint="@string/career">

                <AutoCompleteTextView
                    android:id="@+id/act_career"
                    style="@style/textinputedittext"
                    android:layout_marginEnd="@dimen/global_middle"
                    android:hint="@string/jobless"
                    android:inputType="none"

                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_email"
                style="@style/textinputlayout"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/te_email"
                    style="@style/textinputedittext" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_phone"
                style="@style/textinputlayout"
                android:hint="@string/phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/te_phone"
                    style="@style/textinputedittext"
                    android:hint="@string/phone_num"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_address"
                style="@style/textinputlayout"
                android:hint="@string/address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/te_address"
                    style="@style/textinputedittext" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_date_of_birth"
                style="@style/textinputlayout"
                android:hint="@string/date_of_birth">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/te_date_of_birth"
                    style="@style/textinputedittext"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/date_start" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height_2"
                android:layout_marginBottom="@dimen/global_middle"
                android:backgroundTint="@color/c_orange"
                android:text="@string/save"
                android:textColor="@color/f_white_static"
                android:textSize="@dimen/font_standart_plus" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>